# ytComments

./: README.md  pyproject.toml
Docs/: README.md
backend/: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
backend/src/: config.py  main.py  open_ai.py  youtube.py
backend/src/auth/: auth.py
backend/src/database/: create_db.py  database.py  dependencies.py  models.py  reset_db.py  reset_tables.py  show_tables.py
backend/src/database/script/: reset_db.py
backend/src/database/scripts/: drop_tables.py  reset_tables.py  show_tables.py
backend/src/routes/: auth.py  channels.py  comments.py  users.py  videos.py
backend/src/schemas/: schemas.py
backend/src/utils/: db_operations.py  schemas.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.app.json
frontend/src/: App.jsx  App.tsx  Route.tsx  api.ts  main.tsx
frontend/src/Pages/: AISummary.tsx  Account.tsx  Dashboard.tsx  ErrorPage.tsx  Home.tsx  Landing.tsx  VideoById.tsx
frontend/src/components/: AuthOptions.tsx  Login.tsx  Navbar.tsx  Pagination.tsx  PrivateRoute.tsx  VideoCard.tsx
frontend/src/config/: env.ts
frontend/src/context/: AuthContext.tsx  SummaryContext.tsx
frontend/src/utils/: auth.ts
src/: main.py
