[tool.poetry]
name = "ytcomments"
version = "0.1.0"
description = ""
authors = ["EdwinTJ <edwin16x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.143.0"
python-dotenv = "^1.0.1"
openai = "^1.43.0"
fastapi = {extras = ["standard"], version = "^0.114.0"}
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
